Save fields and images when lock is clicked

--- a/index.html
+++ b/index.html
@@ -873,7 +873,9 @@
 				<input id="offer1Image" class="brandVarInput" type="file" value="" style="display: none;">
 				<span id="offer1ImageUnlock" class="material-symbols-outlined" onclick="unlockOffer1Image();">lock_open</span>
 				<span style="background-color: darkgreen; color: white; border-radius: 50%; height: 25px; width: 25px;" id="offer1ImageLock" class="material-symbols-outlined" onclick="lockOffer1Image();">lock</span>
+				<img alt="" src="" style="padding: 0 10px 0 10px; max-height: 200px; max-width: 200px;" id="uploadedOffer1Image">
 				<p id="offer1ImageValueDisplay" style="display: none;"></p>
+				<img id="offer1Bro" style="padding-left: 20px;" alt="Offer1 Image" src="">
 				<button id="offer1ImageClear" onclick="clearOffer1Image();">Clear</button>
 			</div>
 
@@ -953,7 +955,9 @@
 				<input id="offer2Image" class="brandVarInput" type="file" value="" style="display: none;">
 				<span id="offer2ImageUnlock" class="material-symbols-outlined" onclick="unlockOffer2Image();">lock_open</span>
 				<span style="background-color: darkgreen; color: white; border-radius: 50%; height: 25px; width: 25px;" id="offer2ImageLock" class="material-symbols-outlined" onclick="lockOffer2Image();">lock</span>
+				<img alt="" src="" style="padding: 0 10px 0 10px; max-height: 200px; max-width: 200px;" id="uploadedOffer2Image">
 				<p id="offer2ImageValueDisplay" style="display: none;"></p>
+				<img id="offer2Bro" style="padding-left: 20px;" alt="Offer2 Image" src="">
 				<button id="offer2ImageClear" onclick="clearOffer2Image();">Clear</button>
 			</div>
 		</details>
@@ -994,7 +998,9 @@
 				<input id="person1Headshot" class="brandVarInput" type="file" accept="image/*" value="" style="display: none;">
 				<span id="person1HeadshotUnlock" class="material-symbols-outlined" onclick="unlockPerson1Headshot();">lock_open</span>
 				<span style="background-color: darkgreen; color: white; border-radius: 50%; height: 25px; width: 25px;" id="person1HeadshotLock" class="material-symbols-outlined" onclick="lockPerson1Headshot();">lock</span>
+				<img alt="" src="" style="padding: 0 10px 0 10px; max-height: 200px; max-width: 200px;" id="uploadedPerson1HeadshotImage">
 				<p id="person1HeadshotValueDisplay" style="display: none;"></p>
+				<img id="person1HeadshotBro" style="padding-left: 20px;" alt="Person1 Headshot" src="">
 				<button id="person1HeadshotClear" onclick="clearPerson1Headshot();">Clear</button>
 			</div>
 
@@ -1085,7 +1091,9 @@
 				<input id="person2Headshot" class="brandVarInput" type="file" accept="image/*" value="" style="display: none;">
 				<span id="person2HeadshotUnlock" class="material-symbols-outlined" onclick="unlockPerson2Headshot();">lock_open</span>
 				<span style="background-color: darkgreen; color: white; border-radius: 50%; height: 25px; width: 25px;" id="person2HeadshotLock" class="material-symbols-outlined" onclick="lockPerson2Headshot();">lock</span>
+				<img alt="" src="" style="padding: 0 10px 0 10px; max-height: 200px; max-width: 200px;" id="uploadedPerson2HeadshotImage">
 				<p id="person2HeadshotValueDisplay" style="display: none;"></p>
+				<img id="person2HeadshotBro" style="padding-left: 20px;" alt="Person2 Headshot" src="">
 				<button id="person2HeadshotClear" onclick="clearPerson2Headshot();">Clear</button>
 			</div>
 
